--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,14 @@ Version: 0.0.2
 Author: Guilherme Viana <viana.guilherme@proton.me>
 Maintainer: Guilherme Viana <viana.guilherme@proton.me>
 Depends: R (>= 2.7.0), methods, AnnotationDbi (>= 1.62.2)
-Suggests: DBI, annotate, RUnit
+Suggests: 
+    DBI,
+    annotate,
+    RUnit,
+    knitr,
+    rmarkdown
 License: Artistic-2.0
 organism: Pseudomonas putida
 species: Pseudomonas putida
 biocViews: OrgDb, annotation
-
+VignetteBuilder: knitr
